--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ lerna-debug.log*
 .idea/
 .vscode/*
 !.vscode/extensions.json
+!.vscode/settings.json
+!.vscode/recimo.code-snippets
 *.suo
 *.ntvs*
 *.njsproj
