--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
   "[jsonc]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "prettier.documentSelectors": ["**/*.scss", "**/*.json"]
-  
+  "prettier.documentSelectors": [
+    "**/*.scss",
+    "**/*.json"
+  ]
 }
