--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "vue-router": "^4.6.4"
   },
   "devDependencies": {
+    "@iconify-json/material-symbols": "^1.2.51",
     "@vitejs/plugin-vue": "^6.0.1",
     "sass": "^1.97.1",
+    "unplugin-icons": "^22.5.0",
+    "unplugin-vue-components": "^30.0.0",
     "vite": "^7.2.4"
   }
 }
