--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/noto-sans-tc": "^5.2.8",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "datatables.net-dt": "^2.3.6",
     "datatables.net-vue3": "^3.0.4",
