--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "datatables.net-dt": "^2.3.6",
     "datatables.net-vue3": "^3.0.4",
     "pinia": "^3.0.4",
+    "swiper": "^12.0.3",
     "vue": "^3.5.24",
     "vue-router": "^4.6.4"
   },
