--- a/.gitignore
+++ b/.gitignore
@@ -18,10 +18,11 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+front/
 
 # 【環境變數與機密資訊】
 # 絕對不可上傳，每位組員應根據 .env.example 自行建立本地的 .env
-.env
+# .env
 .env.local
 .env.*.local
 .env.development.local
