--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,5 @@
-VITE_BASE=/cjd102/RECIMO-THE-RECIPE-WEBSITE
-VITE_OUT_DIR=front
+VITE_BASE=/cjd102/g2/recimo
+VITE_OUT_DIR=recimo
 
 # API路徑 -> server上的PHP路徑
 VITE_API_BASE=https://fakestoreapi.com
