--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "pinia": "^3.0.4",
     "swiper": "^12.0.3",
     "vue": "^3.5.24",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@iconify-json/material-symbols": "^1.2.51",
