--- a/.env
+++ b/.env
@@ -2,7 +2,9 @@ VITE_BASE=/
 VITE_OUT_DIR=dist
 
 # API路徑 -> 改為本機的PHP路徑
-VITE_API_BASE=https://fakestoreapi.com
+# VITE_API_BASE=https://fakestoreapi.com
+VITE_API_BASE=http://localhost:8888/api/
 
 # 圖片等檔案放置目錄
-VITE_FILE_URL=https://tibamef2e.com/cjd102/RECIMO-THE-RECIPE-WEBSITE
+# VITE_FILE_URL=https://tibamef2e.com/cjd102/RECIMO-THE-RECIPE-WEBSITE
+VITE_FILE_URL=http://localhost:8888/api/updates/
