Fix:修改首頁圖片路徑

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ VITE_API_BASE=http://localhost:8888/recimo_api/
 
 # 圖片等檔案放置目錄
 # VITE_FILE_URL=https://tibamef2e.com/cjd102/RECIMO-THE-RECIPE-WEBSITE
-VITE_FILE_URL=http://localhost:8888/recimo_api/img/
+VITE_FILE_URL=http://localhost:8888/recimo_api/
