--- a/.env.prod
+++ b/.env.prod
@@ -9,4 +9,4 @@ VITE_API_BASE=https://tibamef2e.com/cjd102/g2/api/
 
 # 圖片等檔案放置目錄
 # VITE_FILE_URL=https://tibamef2e.com/chd104/ingrid/file
-VITE_FILE_URL=https://tibamef2e.com/cjd102/g2/img/
+VITE_FILE_URL=https://tibamef2e.com/cjd102/g2/
