--- a/.env
+++ b/.env
@@ -1,10 +1,13 @@
 VITE_BASE=/
 VITE_OUT_DIR=dist
 
-# API路徑 -> 改為本機的PHP路徑
-# VITE_API_BASE=https://fakestoreapi.com
+# API路徑 -> 本機的PHP路徑
 VITE_API_BASE=http://localhost:8888/recimo_api/
 
 # 圖片等檔案放置目錄
-# VITE_FILE_URL=https://tibamef2e.com/cjd102/RECIMO-THE-RECIPE-WEBSITE
 VITE_FILE_URL=http://localhost:8888/recimo_api/
+
+# 以下為本機端顯示圖片的路徑：
+# http://localhost:8888/recimo_api/img/recipes/7/cover.png
+# 因為資料庫的url欄位已經包含img，所以變數名稱只取"http" ~ "recimo_api"這一段
+
