--- a/.env.prod
+++ b/.env.prod
@@ -1,12 +1,12 @@
 VITE_BASE=/cjd102/g2/recimo/
 VITE_OUT_DIR=recimo
 
-
-#以下內容暫時未被引用，留著僅作不時之需的範例  
 # API路徑 -> server上的PHP路徑
-# VITE_API_BASE=https://fakestoreapi.com
 VITE_API_BASE=https://tibamef2e.com/cjd102/g2/api/
 
 # 圖片等檔案放置目錄
-# VITE_FILE_URL=https://tibamef2e.com/chd104/ingrid/file
 VITE_FILE_URL=https://tibamef2e.com/cjd102/g2/
+
+# 以下為Tibame伺服器端顯示圖片的路徑：
+# # https://tibamef2e.com/cjd102/g2/img/recipes/7/cover.png
+# 因為資料庫的url欄位已經包含img，所以變數名稱只取"http" ~ "g2"這一段
