--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ VITE_FILE_URL=http://localhost:8888/recimo_api/
 # http://localhost:8888/recimo_api/img/recipes/7/cover.png
 # 因為資料庫的url欄位已經包含img，所以變數名稱只取"http" ~ "recimo_api"這一段
 
-# google登入金鑰 (範例格式，建議真實金鑰移至 .env.local)
+# google登入金鑰 (真實金鑰移至 .env.local)
 VITE_GOOGLE_CLIENT_ID=
