--- a/.env
+++ b/.env
@@ -2,15 +2,15 @@ VITE_BASE=/
 VITE_OUT_DIR=dist
 
 # # API路徑 -> 本機的PHP路徑
-# VITE_API_BASE=http://localhost:8888/recimo_api/
+VITE_API_BASE=http://localhost:8888/recimo_api/
 
 # 圖片等檔案放置目錄
-# VITE_FILE_URL=http://localhost:8888/recimo_api/
+VITE_FILE_URL=http://localhost:8888/recimo_api/
 
-VITE_API_BASE=https://tibamef2e.com/cjd102/g2/api/
+# VITE_API_BASE=https://tibamef2e.com/cjd102/g2/api/
 
 # # 圖片等檔案放置目錄
-VITE_FILE_URL=https://tibamef2e.com/cjd102/g2/
+# VITE_FILE_URL=https://tibamef2e.com/cjd102/g2/
 
 # 以下為本機端顯示圖片的路徑：
 # http://localhost:8888/recimo_api/img/recipes/7/cover.png
