--- a/.env.prod
+++ b/.env.prod
@@ -5,7 +5,7 @@ VITE_OUT_DIR=recimo
 VITE_API_BASE=https://tibamef2e.com/cjd102/g2/api/
 
 # 圖片等檔案放置目錄
-VITE_FILE_URL=https://tibamef2e.com/cjd102/g2/
+VITE_FILE_URL=https://tibamef2e.com/cjd102/g2/api/
 
 # 以下為Tibame伺服器端顯示圖片的路徑：
 # # https://tibamef2e.com/cjd102/g2/img/recipes/7/cover.png
